force-app/main/default/objects/maps__AdvRouteQueryFilter__c/maps__AdvRouteQueryFilter__c.object-meta.xml
<CustomObject>
    <label>Maps Advanced Route Query Filter</label>
    <nameField>
        <label>Maps Advanced Route Query Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Query Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>