force-app/main/default/objects/maps__AdvRouteQueryFilter__c/fields/maps__AdvRouteQueryFilterGrouping__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRouteQueryFilterGrouping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maps Advanced Route Query Filter Group</label>
    <referenceTo>maps__AdvRouteQueryFilterGrouping__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Query Filters</relationshipLabel>
    <relationshipName>AdvRouteQueryFilters</relationshipName>
    <type>Lookup</type>
</CustomField>