force-app/main/default/objects/maps__AdvRouteQueryFilter__c/fields/maps__BooleanValue__c.field-meta.xml
<CustomField>
    <fullName>maps__BooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is value of the checkbox</description>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>