force-app/main/default/objects/maps__AdvRouteQueryFilter__c/fields/maps__FieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__FieldApi__c</fullName>
    <label>Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>