force-app/main/default/objects/maps__AdvRouteQueryFilter__c/fields/maps__LogicOrder__c.field-meta.xml
<CustomField>
    <fullName>maps__LogicOrder__c</fullName>
    <label>Logic Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>