force-app/main/default/objects/maps__AdvRouteQueryFilter__c/fields/maps__Operator__c.field-meta.xml
<CustomField>
    <fullName>maps__Operator__c</fullName>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>