force-app/main/default/objects/maps__AdvRouteQueryFilter__c/fields/maps__Type__c.field-meta.xml
<CustomField>
    <fullName>maps__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>